--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,52 @@ li {
   main styling starts here
 =================================*/
 
-
+.carousel-container {
+  position: relative;
+  color: #fff;
+ }
+ 
+ .carousel li { overflow: hidden; }
+ 
+ .slide2, .slide3 {display: none;}
+ 
+ .slide-controls {
+   max-width: 60%;
+   padding: 21px 33px 26px;
+   display: flex;
+   justify-content: space-between;
+   position: absolute;
+   bottom: 4px;
+   left: 0;
+   right: 0;
+   margin: 0 auto;
+   background-color: #dc6226;
+ }
+ 
+ .slide1-info, .slide2-info, .slide3-info {
+   flex-basis: 65%;
+   font-size: 50px;
+   font-weight: 800;
+   text-align: center;
+   text-transform: uppercase;
+ }
+ 
+ .control-btn {
+   border: none;
+   background-color: inherit;
+   color: inherit;
+   font-family: "FontAwesome";
+   font-size: 52px;
+ }
+ 
+ .control-btn:hover {
+   transform: scale(1.3);
+   transition: transform 0.2s ease-in;
+ }
+ 
+ .right-btn::before { content: "\f105"; }
+ 
+ .left-btn::before { content: "\f104"; }
 
 
 
